# console-raytracer

./: .gitignore  README.md
src/: CMakeLists.txt  camera.cpp  camera.h  color.h  console-raytracer.sln  core.h  film.cpp  film.h  geometry.cpp  geometry.h  intersection.h  light.cpp  light.h  main.cpp  material.cpp  material.h  output.ppm  primitive.cpp  primitive.h  progressbar.cpp  progressbar.h  src.pro  src.vcxproj  src.vcxproj.filters
src/Win32/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  console-raytracer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
src/Win32/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  console-raytracer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
src/debug/: src.ilk
